--- a/face_config.json
+++ b/face_config.json
@@ -11,6 +11,56 @@
       "AniStickerId": "38"
     },
     {
+      "QSid": "415",
+      "QDes": "/划龙舟",
+      "IQLid": "415",
+      "AQLid": "415",
+      "EMCode": "10415",
+      "AniStickerType": 3,
+      "AniStickerPackId": "1",
+      "AniStickerId": "43",
+      "AniStickerWidth": 192,
+      "AniStickerHeight": 76
+    },
+    {
+      "QSid": "416",
+      "QDes": "/中龙舟",
+      "IQLid": "416",
+      "AQLid": "416",
+      "EMCode": "10416",
+      "AniStickerType": 3,
+      "AniStickerPackId": "1",
+      "AniStickerId": "44",
+      "AniStickerWidth": 192,
+      "AniStickerHeight": 76,
+      "QHide": "1"
+    },
+    {
+      "QSid": "417",
+      "QDes": "/大龙舟",
+      "IQLid": "417",
+      "AQLid": "417",
+      "EMCode": "10417",
+      "AniStickerType": 3,
+      "AniStickerPackId": "1",
+      "AniStickerId": "45",
+      "AniStickerWidth": 192,
+      "AniStickerHeight": 96,
+      "QHide": "1"
+    },
+    {
+      "QSid": "392",
+      "QDes": "/龙年快乐",
+      "IQLid": "392",
+      "AQLid": "392",
+      "EMCode": "10392",
+      "AniStickerType": 3,
+      "AniStickerPackId": "1",
+      "AniStickerId": "38",
+      "AniStickerWidth": 129,
+      "AniStickerHeight": 57
+    },
+    {
       "QSid": "393",
       "QDes": "/新年中龙",
       "IQLid": "393",
@@ -18,7 +68,22 @@
       "EMCode": "10393",
       "AniStickerType": 3,
       "AniStickerPackId": "1",
-      "AniStickerId": "39"
+      "AniStickerId": "39",
+      "AniStickerWidth": 159,
+      "AniStickerHeight": 72
+    },
+    {
+      "QSid": "394",
+      "QDes": "/新年大龙",
+      "IQLid": "394",
+      "AQLid": "394",
+      "EMCode": "10394",
+      "QHide": "1",
+      "AniStickerType": 3,
+      "AniStickerPackId": "1",
+      "AniStickerId": "40",
+      "AniStickerWidth": 220,
+      "AniStickerHeight": 91
     },
     {
       "QSid": "364",
